ingress/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vpn-access-only
  namespace: ingress-nginx
spec:
  podSelector:
    matchLabels:
      vpn-access-only: "true"
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 100.64.0.0/10
          #- ipBlock:
          #cidr: 192.168.86.0/24
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
